# reviewal

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  dist-workspace.toml
.reviewal/: config.toml
assets/: SKILL.md
assets/personas/: advocate.md  breaker.md  prover.md  skeptic.md  steward.md  stickler.md
src/: config.rs  lib.rs  main.rs  skill.rs
src/engine/: agent.rs  error.rs  mod.rs  model.rs  parse.rs  persona.rs  preflight.rs  prompt.rs  run.rs  store.rs  synthesis.rs  target.rs
src/ui/: app.rs  composer.rs  dashboard.rs  done.rs  editor.rs  format.rs  home.rs  mod.rs  overlay.rs  personas.rs  theme.rs  triage.rs
tests/: cli.rs  live.rs  public_api.rs
tests/fixtures/agent-output/: banner-then-json.txt  content-block.txt  fenced.txt  plain.txt  result-wrapper.txt
